# RTS-Assignment

RTS Assignment/gcs/: Cargo.toml
RTS Assignment/gcs/benches/: gsc_benchmarks.rs
RTS Assignment/gcs/src/: commands.rs  communication.rs  faults.rs  ground_command.rs  interlock.rs  main.rs  metrics.rs  protocol.rs  scheduler.rs  telemetry.rs  uplink.rs
RTS Assignment/satellite/: Cargo.toml
RTS Assignment/satellite/benches/: benchmarks.rs
RTS Assignment/satellite/src/: communication.rs  config.rs  main.rs  metrics.rs  print_lock.rs  scheduler.rs  sensors.rs
gcs/benches/: gsc_benchmarks.rs
satellite/: config.toml
satellite/src/: communication.rs  main.rs  metrics.rs
