[package]
name = "satellite"
version = "0.1.0"
edition = "2024"
authors = ["Ten Vui Khang <TO074341>"]
description = "Satellite Onboard Control System - Real-Time Systems Assignment"

[dependencies]
# Async runtime (Lab 8)
tokio = { version = "1.35", features = ["full", "time", "rt-multi-thread", "signal"] }

# Serialization for network protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation (for sensor simulation and fault injection)
rand = "0.8"

# Configuration file parsing
toml = "0.8"

# Error handling utilities
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# For testing
tokio-test = "0.4"

[profile.release]
# Optimization for real-time performance (Lab 2)
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster compile times during development
opt-level = 0
