[package]
name = "satellite_ocs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "satellite_ocs"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3